# research-assistant

./: .env.example  .gitignore  LICNESE  README.md  chat.py  main.py  pyproject.toml
src/research_assistant/: index.py  loaders.py  utils.py
